--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -1,30 +1,58 @@
 @import "mixins";
-
-$color-primary: blueviolet;
-
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
+$color-primary: #fe6751;
+$color-primary-mid-light: #fe6751ba;
+$color-primary-light: #ffece8;
+$color-body: #ffece8;
+$color-white: #ffffff;
+
+:hover,
+:active,
+:focus {
+  -webkit-transition: 0.5s all ease;
+  -moz-transition: 0.5s all ease;
+  transition: 0.5s all ease;
+}
+
+body {
+  background-color: #fbfcfe;
+  font-size: 14px;
+}
 .content-container {
   padding: 20px 0;
 }
 .navbar {
   &.bg-dark {
-    background-color: #3f51b5 !important;
+    background-color: #ffffff !important;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
   }
   &.rounded {
-    background-color: #262f5f !important;
+    background-color: $color-primary !important;
+  }
+}
+.navbar-dark .navbar-brand {
+  color: $color-primary;
+  font-weight: bold;
+  &:hover {
+    color: $color-primary !important;
   }
 }
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show > .nav-link {
-  color: #ffffff !important;
+  color: #333333 !important;
 }
 
-
+.navbar.rounded {
+  border-radius: 0px !important;
+}
 .navbar-light .navbar-nav .nav-link {
   color: rgba(255, 255, 255, 1) !important;
+}
+.navbar-dark .navbar-nav .nav-link {
+  color: #333333 !important;
 }
 
 .header {
@@ -64,39 +92,26 @@ $color-primary: blueviolet;
   padding: 60px 0;
 }
 
-// section {
-// 	.section-title {
-// 		text-align: center;
-// 		color: #007b5e;
-// 		margin-bottom: 50px;
-// 		text-transform: uppercase;
-// 	}
-// }
 .footer {
-  background: #262f5f !important;
+  background: #fff !important;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
   .footer-logo-text {
-    color: #ffffff;
+    color: $color-primary;
     margin: 0 0 20px;
-  }
-  i {
-    color: #fff;
-    padding-right: 10px;
-  }
-  p {
-    color: #ffffff;
   }
   h5 {
     padding-left: 10px;
-    border-left: 3px solid #eeeeee;
+    border-left: 3px solid #000000;
     padding-bottom: 6px;
     margin-bottom: 20px;
-    color: #ffffff;
+    color: #000000;
   }
   a {
-    color: #ffffff;
     text-decoration: none !important;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
+    color: #333333;
+    font-size: 15px;
   }
   ul.social {
     li {
@@ -108,34 +123,32 @@ $color-primary: blueviolet;
           -webkit-transition: 0.5s all ease;
           -moz-transition: 0.5s all ease;
           transition: 0.5s all ease;
-        }
-        color: #ffffff;
-        &:hover {
-          color: #eeeeee;
+          color: $color-primary;
         }
       }
       &:hover {
+        i {
+          font-size: 30px;
+          margin-top: -10px;
+          color: $color-primary-light;
+        }
         a {
-          i {
-            font-size: 30px;
-            margin-top: -10px;
-          }
         }
       }
     }
   }
   ul.quick-links {
     li {
-      a {
-        color: #ffffff;
-        i {
-          margin-right: 5px;
-        }
-      }
       padding: 3px 0;
       -webkit-transition: 0.5s all ease;
       -moz-transition: 0.5s all ease;
       transition: 0.5s all ease;
+      i {
+        margin-right: 10px;
+        color: #333333;
+        font-size: 11px;
+        vertical-align: middle;
+      }
       &:hover {
         padding: 3px 0;
         margin-left: 5px;
@@ -160,23 +173,171 @@ $color-primary: blueviolet;
   }
 }
 
+.main-container {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  min-height: 300px;
+}
+
+.topStores__wrapper {
+  .topStores__Ul {
+    padding: 0;
+    margin: 0;
+  }
+  .storeCard-Col {
+    width: 20%;
+    display: inline-block;
+    padding: 0 10px;
+    list-style: none;
+    vertical-align: top;
+    margin: 0 0 15px;
+  }
+  .storeCard {
+    width: 100%;
+    &.storeCard-small {
+      padding: 10px 0px;
+      text-align: center;
+      position: relative;
+      padding: 24px;
+      box-shadow: 1px 1px 3px #0000002b;
+      h5 {
+        background-color: $color-primary-light;
+        max-width: 100px;
+        display: block;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        margin: 0;
+        border-radius: 5px;
+      }
+      img {
+        max-width: 100%;
+        width: 120px;
+        max-height: 100%;
+      }
+      a {
+        color: $color-primary-mid-light;
+        font-size: 13px;
+        display: block;
+        width: 100%;
+      }
+    }
+  }
+}
+
+.search__wrapper {
+  padding: 30px 10px;
+  background-color: #ffffff;
+  box-shadow: 1px 1px 10px rgb(0 0 0 / 10%);
+  border-radius: 5px;
+  margin-bottom: 50px;
+  .search__block {
+    text-align: center;
+    .search {
+      max-width: 350px;
+      border-radius: 5px;
+      padding: 12px;
+    }
+  }
+}
+
+.search__block {
+  position: relative;
+  z-index: 9999;
+  max-width: 300px;
+  margin: 0px auto;
+}
+
+.search {
+  border: 1px solid $color-primary;
+  box-sizing: border-box;
+  font-size: 18px;
+  padding: 18px;
+  width: 100%;
+  &:focus {
+    border: 1px solid $color-primary-mid-light;
+    outline: none;
+  }
+}
+
+.results {
+  list-style: none;
+  overflow: hidden;
+  margin: 9px 0 0;
+  padding: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+
+.result {
+  background: #262f5f;
+  color: #eee;
+  margin: 0 0 1px;
+  padding: 8px;
+}
+
+.result a {
+  color: #eee;
+}
+
+.headerSearch {
+  .search__block {
+    width: 200px;
+    .search {
+      background-color: $color-primary-light;
+      border-color: $color-primary-light;
+      color: $color-primary;
+      border-radius: 20px;
+      padding: 5px 10px;
+      outline: none;
+      font-size: 13px;
+
+      &:focus {
+        background-color: $color-primary-mid-light;
+        border-color: $color-primary-light;
+        color: #fff;
+        &::placeholder {
+          color: $color-white;
+        }
+      }
+      &::placeholder {
+        color: $color-primary;
+      }
+    }
+  }
+
+  .result {
+    background-color: #616161;
+    color: #333;
+    padding: 4px 10px;
+    margin-bottom: 1px;
+  }
+}
+
+#rightside .StoreCard {
+  margin-top: 37px;
+}
+
 .StoreCard {
   background-color: #fff;
   text-align: center;
-  margin-bottom: 10px;
+  padding: 20px 25px;
   position: relative;
-  padding-bottom: 1px;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+  border-radius: 15px;
+  i {
+    color: $color-primary;
+  }
   &__image {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     height: 150px;
+    background: #ffece8;
+    border-radius: 10px;
+    margin: 0px 5px 30px;
     img {
       max-width: 120px;
       max-height: 80px;
@@ -187,27 +348,36 @@ $color-primary: blueviolet;
       width: 200px;
       margin-bottom: 1em;
       font-weight: 700;
-      color: #c62828;
+      color: $color-primary;
       text-align: left;
       padding-left: 24px;
-      border-color: #c62828;
+      border-color: $color-primary;
       display: inline-block;
       border: 1px solid;
-      color: #c62828 !important;
       user-select: none;
       padding: 0.375rem 0.75rem;
       font-size: 1rem;
       line-height: 1.5;
       border-radius: 0.25rem;
       text-align: center;
+      &:hover {
+        text-decoration: none;
+        color: $color-primary-light;
+        background-color: $color-primary;
+      }
     }
   }
 }
+
+.promo__anchor {
+  display: none;
+}
+
 .deal__card {
   padding: 15px 20px;
   background-color: #ffffff;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
-  border-radius: 5px;
+  border-radius: 15px;
   margin-bottom: 10px;
   width: 100%;
 
@@ -223,12 +393,11 @@ $color-primary: blueviolet;
 
     .deal__info {
       margin: auto;
-      color: #42c4ac;
+      color: $color-primary;
       padding: 12px 2px;
       font-size: 16px;
       font-weight: 900;
       letter-spacing: 0.2px;
-      height: 110px;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -247,13 +416,16 @@ $color-primary: blueviolet;
       &-subtext {
         text-transform: uppercase;
       }
+      img {
+        max-width: 100%;
+      }
     }
   }
   .deal__desc {
     margin-left: 103px;
     padding: 10px 235px 10px 10px;
     position: relative;
-    min-height: 130px;
+    min-height: 70px;
     &-type {
       font-size: 16px;
       color: #42c5ac;
@@ -269,42 +441,69 @@ $color-primary: blueviolet;
         padding-right: 65px;
         max-height: 52px;
         overflow: hidden;
+       
       }
+      a{
+        &:hover{
+          text-decoration: none;
+          color: $color-primary-mid-light;
+        }
+      }
+
     }
     &-meta {
       display: inline-block;
       color: #8a8a8a;
-      font-size: 14px;
+      font-size: 12px;
       &-lastused {
         span {
           font-weight: 700;
           font-size: 16px;
-          color: #c62828;
+          color: $color-primary;
         }
       }
     }
 
     .deal__cta {
-      width: 180px;
+      width: 175px;
       height: 40px;
       position: absolute;
       right: 20px;
       top: 50%;
       margin-top: -23px;
       z-index: 1;
+      text-transform: capitalize;
 
-      background-color: #c62828;
+      background-color: $color-primary-light;
       display: block;
-      color: #fff;
+      color: $color-primary;
       text-align: center;
       font-size: 16px;
       line-height: 40px;
       right: 12px;
-      border-radius: 2px;
+      border-radius: 50px;
       font-weight: 700;
+   
+    
+      &:hover {
+        background-color: $color-primary;
+
+        a {
+          color: #ffffff;
+        }
+        
+      }
+      
+    
       a {
-        color: #fff;
+        color: $color-primary;
         text-decoration: none;
+        display: block;
+        &:hover {
+          .promo__anchor{
+            display: block;
+          }
+        }
       }
     }
   }
@@ -328,28 +527,25 @@ $color-primary: blueviolet;
       margin-top: 10px;
       display: inline-block;
       a {
-        color: #c62828;
+        color: $color-primary;
         text-decoration: none;
         background-color: transparent;
         &:hover {
-          color: #208473;
+          color: $color-primary;
         }
       }
     }
   }
 }
 
-
-
-
 @media only screen and (max-width: 600px) {
   .topStores__wrapper .storeCard.storeCard-small {
     width: 48%;
   }
   .footer .text-center {
-    text-align: left  !important;
+    text-align: left !important;
   }
-  .footer .quick-links-col{
-    padding-left: 25px ;
+  .footer .quick-links-col {
+    padding-left: 25px;
   }
 }
