--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -539,7 +539,7 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-  .topStores__wrapper .storeCard.storeCard-small {
+  .topStores__wrapper .storeCard-Col {
     width: 48%;
   }
   .footer .text-center {
@@ -547,5 +547,20 @@ body {
   }
   .footer .quick-links-col {
     padding-left: 25px;
+  }
+  .deal__card .deal__desc .deal__cta{position: relative;margin-top: 10px;font-size: 14px;    width: 135px;}
+  .deal__card .deal__desc{
+    padding-right: 0;
+    margin-left: 53px;
+  }
+  .deal__card{
+    padding:10px ​10px
+  }
+  .deal__card .deal__discount{    width: 50px;}
+  .deal__card .deal__discount .deal__info-text{font-size: 18px;}
+  .deal__card .deal__discount .deal__info{font-size: 13px;}
+  .deal__card .deal__desc-title h2{
+    font-size: 16px;
+    line-height: 19px;
   }
 }
