api changes and file changes

--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -37,7 +37,7 @@ body {
     background-color: $color-primary;
   }
   .navbar-brand {
-    color: $color-primary;
+    color: $color-primary!important;
     font-weight: bold;
     &:hover {
       color: $color-primary !important;
